"dox/ChageLog"
	$Id: ChangeLog,v 1.10 2007/01/24 04:14:42 fang Exp $

2007-01-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-68:
	  scantexdepend.awk: more robust for when dependent file names
		wrap around to next line in the .log file, try again...  
	  mk/Make.latex: only make .ind if .idx exists
	  Moved lang/hac.bib to common/hac.bib as shared biblio.
	  Added placeholder prsim/chpsim documents (empty)
	  Added CHP comments in cast2hac/CHP.tex and lang/CHP.tex


2006-11-26	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-59:
	  Removed traces of maketexdepend, leaving only scantexdepend.
	  Still sits in CVS, but no longer distributed or mentioned.  


2006-11-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-58:
	  Replaced old maketexdepend system with new scantexdepend.awk.
	  Added: mk/scantexdepend.awk
		This post-processes the .log file to produces a dependency
		list suitable for Makefiles.  
		Unlike its maketexdepend predecessor, this runs post-compile, 
		so there is expected to be a depend file (may be empty dummy)
		existing, or one may be created during the first invocation.
		Script is much simpler, shorter, with but few exceptions. 
	  TODO: remove all references to maketexdepend permanently, 
		and remove from distribution.  


2006-05-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-05:
	  Created common/ directory for useful macros and packages.
	  mk/Make.latex: pointer TEXINPUTS to dox/{common,mk}
	  mk/maketexdepend.{awk,tex}: added a ignorepattern command.
	  mk/Makefile.am: no longer copy maketexdepend.tex to builddir.
	  Added cast2hac directory -- about CAST migration.  


2006-02-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-77-2:
	  */Makefile.am: now configurable with --disable docs to suppress
		default building of documents.  


2006-02-04	David Fang		<fangism@users.sourceforge.net>
