@@ -3,7 +3,7 @@
 # (Prior to 2005/06/19, this file was "configure.in", 
 #	in case one should want to trace back the CVS revision history.)
 #
-#	$Id: configure.ac,v 1.113 2007/02/05 06:39:40 fang Exp $
+#	$Id: configure.ac,v 1.114 2007/02/06 21:36:23 fang Exp $
 
 # Hint: Try running "autoscan" for suggestions on what should go in here.  
 # Results of autoscan appear in "configure.scan".  
@@ -445,6 +445,7 @@ AC_CONFIG_FILES([
 	dox/cast2hac/Makefile
 	dox/prsim/Makefile
 	dox/chpsim/Makefile
+	dox/chpsim/figs/build_path
 	lib/Makefile
 	hackt.doxygen.config
 ])
