@@ -1,5 +1,5 @@
 # "dox/Make.dox-head"
-#	$Id: Make.dox-head,v 1.7 2006/11/26 04:41:03 fang Exp $
+#	$Id: Make.dox-head,v 1.8 2007/02/06 21:36:24 fang Exp $
 #	vim: ft=automake
 # To be included first by Makefiles in subdirectories
 # The complement is "dox/Make.dox-tail" which includes "dox/mk/Make.latex".
@@ -23,8 +23,9 @@ PSNUP = psnup
 #	-v script=$(top_srcdir)/dox/mk/maketexdepend.awk -v srcdir=$(srcdir) \
 #	-v readable=1 -v extensions="pdf dvi depend" -v touch=0
 
-SUFFIXES = .ps .dvi .tex .pdf .ind .idx .bbl .aux \
-	.dvidepend .pdfdepend
+SUFFIXES =
+# SUFFIXES = .ps .dvi .tex .pdf .ind .idx .bbl .aux \
+#	.dvidepend .pdfdepend
 
 # where various documents (pdf, ps) should be installed
 docdir = $(pkgdatadir)/doc
