@@ -1,0 +1,17 @@
+% "chpsim/execution.tex"
+
+\section{Event-driven Execution}
+\label{sec:exec}
+
+Describe event-driven execution algorithm.  
+
+See Figure~\ref{fig:event_exec}.
+
+\begin{figure}
+\begin{center}
+\includegraphics[width=5in]{figs/chpsim_event_cycle}
+\caption{CHP simulator event life cycle}
+\label{fig:event_exec}
+\end{center}
+\end{figure}
+
