@@ -1,0 +1,24 @@
+% "chpsim/intro.tex"
+%	$Id: intro.tex,v 1.1 2007/02/06 21:36:26 fang Exp $
+
+\section{Introduction}
+\label{sec:intro}
+
+
+\chpsim\ is a simulator for the CHP language,
+which is based on Hoare's CSP~\cite{ref:csp}.
+
+
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
+\subsection{History}
+\label{sec:intro:history}
+
+Where it all began...
+
+History of original chpsim?  Differences.  
+
+Inspiration from \ttt{mcc}, a concurrent dialect of the C language.  
+
+
+
+
