@@ -1,6 +1,6 @@
 % "hacdef.tex"
 % Macros and definitions common to most HAC latex documents.  
-%	$Id: hacdef.tex,v 1.4 2006/06/27 02:33:11 fang Exp $
+%	$Id: hacdef.tex,v 1.5 2007/02/06 21:36:29 fang Exp $
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % format shortcuts
@@ -12,6 +12,8 @@
 \newcommand\hac{HAC}
 \newcommand\CAST{CAST}
 \newcommand\hackt{HACKT}
+\newcommand\prsim{\ttt{prsim}}
+\newcommand\chpsim{\ttt{chpsim}}
 \newcommand\binhackt{\ttt{hackt}}
 \newcommand\pint{\ttt{pint}}
 \newcommand\pbool{\ttt{pbool}}
