@@ -4,7 +4,10 @@
 # This file uses macros defined in "dox/Make.dox-head"
 #	In other words, that file must be included first!
 # Note, this is a configurable Makefile.in, resolved by the top configure script
-#	$Id: Make.latex,v 1.13 2007/01/24 04:14:51 fang Exp $
+#	$Id: Make.latex,v 1.14 2007/02/06 21:36:31 fang Exp $
+
+SUFFIXES += .ps .dvi .tex .pdf .ind .idx .bbl .aux \
+	.dvidepend .pdfdepend
 
 # useful macros
 # some of these are defined to be specific to this (hackt) project
